APPPOCTOOL-41: Fixed Sonar reported codesmell